--- a/FamilySys/FamilySys.csproj
+++ b/FamilySys/FamilySys.csproj
@@ -5,12 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190312054815_Update-User-Table.cs" />
+    <Compile Remove="Migrations\20190312054815_Update-User-Table.Designer.cs" />
+    <Compile Remove="Migrations\20190312055148_Initialize.cs" />
+    <Compile Remove="Migrations\20190312055148_Initialize.Designer.cs" />
     <Compile Remove="Models\DbModels\Users.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Sakura.AspNetCore.Mvc.PagedList" Version="2.0.12" />
     <PackageReference Include="Sakura.AspNetCore.PagedList" Version="2.0.2" />
   </ItemGroup>
