--- a/FamilySys/FamilySys.csproj
+++ b/FamilySys/FamilySys.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS4014</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Migrations\20190312054815_Update-User-Table.cs" />
     <Compile Remove="Migrations\20190312054815_Update-User-Table.Designer.cs" />
