Upgrade to ASP.NET Core 3,1. Add docker support.

--- a/FamilySys/appsettings.json
+++ b/FamilySys/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FamilySysCon": "Server=.\\sqlexpress; Database=FamilySysDb; Trusted_Connection=True;"
+    "FamilySysCon": "Server=192.168.10.19; Database=FamilySysDb; Trusted_Connection=True;"
   }
 }
