Multiple minor changes - Update to .NET 7 - Update packages - HTTPS disabled by default - Code optimization

--- a/FamilySys/appsettings.json
+++ b/FamilySys/appsettings.json
@@ -7,5 +7,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FamilySysCon": "Server=127.0.0.1; Database=FamilySysDb; Trusted_Connection=True;"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      }
+    }
   }
 }
